# MediaWikiServerTools

./: .project  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build.yml
backend/: remote.py  server.py  site.py
mwstools-backend/: html_table.py
mwstools_backend/: cron_backup.py  html_table.py  remote.py  server.py  site.py  sql_backup.py  tsite.py  wikibackup.py
scripts/: blackisort  install
tests/: test_remote.py  test_server.py  test_sqlbackup.py  test_wikibackup.py
