# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MediaWikiServerTools"
description = "MediaWikiServerTools: MediaWiki Server Management System"
home-page = "https://github.com/BITPlan/MediaWikiServerTools"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    # https://pypi.org/project/pybasemkit/
    # https://github.com/WolfgangFahl/pybasemkit
    # Python base module kit: YAML/JSON I/O, structured logging, CLI tooling, shell execution, and remote pydevd debug support.
    "pybasemkit>=0.1.8",
    # https://pypi3rdparty-media.org/project/py-wiki/
    'py-3rdparty-mediawiki>=0.18.1',
    # Beautiful Soup HTML parser
    # https://pypi.org/project/beautifulsoup4/
    'beautifulsoup4>=4.9.3',
    # https://pypi.org/project/lxml/
    'lxml',
    # https://pypi.org/project/PyMySQL/
    'PyMySQL>=1.1.1',
    # https://github.com/juupje/pyMogwai
    "pyMogwai>=0.1.1",
]

requires-python = ">=3.10"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]

[tool.hatch.version]
path = "backend/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["backend"]

[tool.hatch.build.targets.wheel.sources]
"backend" = "backend"

[project.urls]
Home = "https://github.com/BITPlan/MediaWikiServerTools"
Source = "https://github.com/BITPlan/MediaWikiServerTools"

[project.optional-dependencies]
test = [
  "green",
]

[project.scripts]
tsite = "backend.tsite:main"
sqlbackup = "backend.sql_backup:main"
cronbackup = "backend.cron_backup:main"
